# ray_tracing_one_week_cuda

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: main.cu
src/object/: hittable.h  sphere.h
src/utility/: ray.h  vec3.h
